--- a/index.html
+++ b/index.html
@@ -1,25 +1,10 @@
-Based on the new screenshots you uploaded, your brand has evolved from the colorful neon look to a much more **premium, clean, and minimalist aesthetic** (similar to Notion or Apple's design style).
-
-I have completely rewritten the code to match this new **Black & White** identity seen in your screenshots, while correctly integrating your background image and logo.
-
-### The Fixes:
-
-1. **Fixed Images:** I used the direct image links so they will now load correctly.
-2. **New Design:** I replicated the "Less doomscrolling" layout, the 3-step process cards, and the waitlist form exactly as shown in your screenshots.
-3. **Modern Animations:** Added smooth fade-ins and hover effects to make it feel "trendy."
-
-### The Complete Website Code (`index.html`)
-
-Save this as `index.html`.
-
-```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Junto | Less doomscrolling. More real life.</title>
-    <link rel="icon" type="image/png" href="https://imgur.com/MKnJhP3.png">
+    <link rel="icon" type="image/png" href="https://imgur.com/a/MKnJhP3">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
@@ -134,7 +119,7 @@ Save this as `index.html`.
             align-items: center;
             padding: 8rem 5% 4rem;
             /* Using your specific background image lightly overlaid */
-            background: linear-gradient(to right, rgba(255,255,255,0.95), rgba(255,255,255,0.4)), url('https://imgur.com/4YTrGjt.jpeg');
+            background: linear-gradient(to right, rgba(255,255,255,0.95), rgba(255,255,255,0.4)), url('https://imgur.com/4YTrGjt');
             background-size: cover;
             background-position: center;
         }
@@ -481,7 +466,7 @@ Save this as `index.html`.
 
     <nav>
         <a href="#" class="logo-container">
-            <img src="https://imgur.com/MKnJhP3.png" alt="Junto" class="logo-img">
+            <img src="https://imgur.com/MKnJhP3" alt="Junto" class="logo-img">
             Junto
         </a>
         <div class="nav-links">
@@ -670,7 +655,7 @@ Save this as `index.html`.
         <div class="footer-grid">
             <div class="footer-col">
                 <a href="#" class="logo-container" style="margin-bottom: 1rem;">
-                    <img src="https://imgur.com/MKnJhP3.png" alt="Junto" class="logo-img">
+                    <img src="https://imgur.com/MKnJhP3" alt="Junto" class="logo-img">
                     Junto
                 </a>
                 <p style="color: var(--text-grey); font-size: 0.9rem;">The anti-social social app. Less screen time, more real time.</p>
@@ -707,5 +692,3 @@ Save this as `index.html`.
 
 </body>
 </html>
-
-```
